# rtb-rl-exercise

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  CLOUD_ARCHITECTURE.md  Dockerfile  LICENSE  Makefile  README.md  TUTORIAL.md  TUTORIAL_SIMPLE.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
configs/: config.yaml
data/: README.md
infra/terraform/: README.md  main.tf  variables.tf
infra/vertex/: pipeline.py
scripts/: build_features.py  generate_data.py  run_sim.py  serve.py  train.py
src/rtb_rl/: __init__.py  cli.py  config.py  registry.py  schemas.py
src/rtb_rl/data/: __init__.py  loaders.py  synth.py
src/rtb_rl/embeddings/: __init__.py  api.py  base.py  factory.py  hashing.py  local.py
src/rtb_rl/features/: __init__.py  affinity.py  encode.py  store.py  user.py  website.py
src/rtb_rl/pipelines/: __init__.py  build_features.py  retrain_loop.py  train.py
src/rtb_rl/rl/: __init__.py  agent.py  cold_start.py  networks.py  replay.py  trainer.py
src/rtb_rl/serving/: __init__.py  app.py  cache.py  deps.py  inference.py
src/rtb_rl/sim/: __init__.py  env.py  evaluate.py
tests/: conftest.py  test_affinity.py  test_agent.py  test_embeddings.py  test_env.py  test_networks.py  test_serving.py  test_synth.py
